tests/specs/node/fs_cp_sync_filter_function_throws/main.out
error: Uncaught (in promise) Error: Test error on iter 4
    throw new Error("Test error on iter 4");
          ^
    at filter (file:///[WILDCARD]/main.ts:24:11)
[WILDCARD]